# opt-tt-wdmd

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: data_policy.md  manuscript_alignment.md
examples/: synthetic_demo.py
src/optttwdmd/: __init__.py  dmd.py  tensor_train.py  windowed.py
