[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opt-tt-wdmd"
version = "0.1.0"
description = "Minimal reference implementation of optimized tensor-train windowed DMD"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "torch",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
